LendersApp/src/objects/MerchantInterviewQuestion__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business  History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewNotes__c</fullName>
        <label>Interview Notes/Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MerchantInterviewQuestionMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Interview Question Master</label>
        <referenceTo>MerchantInterviewQMaster__c</referenceTo>
        <relationshipLabel>Merchant Interview Questions</relationshipLabel>
        <relationshipName>Merchant_Interview_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Merchant Interview Questions</relationshipLabel>
        <relationshipName>Merchant_Interview_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stips__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stips</label>
        <referenceTo>McaApp__Stips__c</referenceTo>
        <relationshipLabel>Merchant Interview Questions</relationshipLabel>
        <relationshipName>Merchant_Interview_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verification</label>
        <referenceTo>UWVerification__c</referenceTo>
        <relationshipLabel>Merchant Interview Questions</relationshipLabel>
        <relationshipName>Merchant_Interview_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Merchant Interview Question</label>
    <nameField>
        <displayFormat>MIQ-{0000000}</displayFormat>
        <label>Question No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Interview Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>